<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        style="@style/tile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checked_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:clickable="false"
                android:focusable="false"
                android:visibility="invisible" />
            <RelativeLayout
                android:layout_centerVertical="true"
                android:id="@+id/consumption_container"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/item_consumption"
                    style="@style/history_list_value"
                    android:text="17.44"/>
                <TextView
                    style="@style/history_list_label"
                    android:layout_alignBaseline="@id/item_consumption"
                    android:layout_toRightOf="@id/item_consumption"
                    android:text="@string/list_consumption_unit"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_centerVertical="true"
                android:id="@+id/gasVolume_container"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/consumption_container">
                <TextView
                    android:id="@+id/item_gasVolume"
                    style="@style/history_list_value"
                    android:text="212.54"/>
                <TextView
                    style="@style/history_list_label"
                    android:layout_alignBaseline="@id/item_gasVolume"
                    android:layout_toRightOf="@id/item_gasVolume"
                    android:text="@string/list_gasVolume_unit"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_centerVertical="true"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/gasVolume_container">
                <TextView
                    android:id="@+id/item_distance"
                    style="@style/history_list_value"
                    android:text="321"/>
                <TextView
                    style="@style/history_list_label"
                    android:layout_alignBaseline="@id/item_distance"
                    android:layout_toRightOf="@id/item_distance"
                    android:text="@string/list_distance_unit"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:paddingRight="3dp"
                android:paddingLeft="3dp"
                android:background="#ff888d8c"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/day_month"
                    android:textSize="18sp"
                    android:layout_marginRight="0dp"
                    style="@style/history_list_value"
                    android:textColor="#FFFFFF"
                    android:text="03.11"/>
                <TextView
                    android:id="@+id/date_year"
                    android:layout_toRightOf="@id/day_month"
                    android:textColor="#FFFFFF"
                    style="@style/history_list_label"
                    android:textSize="18sp"
                    android:text=".2014"/>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/totalCost_container"
                android:layout_alignParentRight="true"
                android:gravity="left"
                android:layout_width="115dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/item_cost"
                    style="@style/history_list_value"

                    android:text="207.66"/>
                <TextView
                    android:layout_toRightOf="@id/item_cost"
                    android:layout_alignBaseline="@id/item_cost"
                    style="@style/history_list_label"
                    android:text="@string/list_totalCost_unit"/>
            </RelativeLayout>

            <RelativeLayout
                android:gravity="left"
                android:layout_toLeftOf="@+id/totalCost_container"
                android:layout_width="80dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/item_price"
                    style="@style/history_list_value"
                    android:text="5.44"/>
                <TextView
                    android:layout_alignBaseline="@id/item_price"
                    android:layout_toRightOf="@id/item_price"
                    style="@style/history_list_label"
                    android:text="@string/list_price_unit"/>
            </RelativeLayout>
        </RelativeLayout>



        <!--</LinearLayout>-->


    </LinearLayout>

</LinearLayout>